--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Edit/Edit_Doppelzylinder.cshtml
@@ -11,7 +11,7 @@
 {
     <h1>Bearbeiten</h1>
     <hr />
-    <div class="row" style="justify-content: center;">
+    <div class="row" style="justify-content: center; text-align: center;">
         <div class="col-md-10">
             <form asp-action="SaveDoppelZylinder" enctype="multipart/form-data" asp-controller="Home">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -107,6 +107,48 @@
                    
                 </div>
 
+                <h5>Für zylinder aussen klein</h5>
+                    <div id="Aussen_innen_klein">
+
+                        <div id="kleinGrose">
+                            <div>
+                                <div>
+                                    <h5>Aussen</h5>
+                                    <input type="number" value="0" name="ausKlein" />
+                                </div>
+                                <div>
+                                    <h5>Preis</h5>
+                                    <input type="number" step="0,00" value="0" name="ausKleinPreis" />
+                                </div>
+                            </div>
+                            <div class="arrow-right">
+                            </div>
+                            <div>
+                                <table class="table">
+                                    <thead>
+                                        <tr class="table-dark">
+                                            <th scope="col">Wert</th>
+                                            <th scope="col">Preis</th>
+                                            <th scope="col"><button type="button" onclick="PlusKleinIntert()" class="btn btn-success">+</button><button type="button" class="btn btn-danger" onclick="MinusKleinIntern()">-</button></th>
+                                        </tr>
+                                    </thead>
+                                    <tbody id="kleiIntern">
+                                       
+                                        @foreach (var list in ViewBag.DoppelKleinSize)
+                                        {
+                                            <tr class="table-info">
+                                            <th scope="row"><input name="internDoppelKlein" value="@list.Intern" type="number" step="0,01" /></th>
+                                            <td><input name="priesDoppelKlein" type="number" value="@list.costSizeIntern" step="0,01" /></td>
+                                            </tr>
+                                        }
+                                        
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+
+                    </div>
+                
                 <div id="productOptions">
 
                     @if (ViewBag.optionV == true)
@@ -185,6 +227,23 @@
         }
 
         <script>
+
+            let table = document.getElementById("kleiIntern");
+
+            function PlusKleinIntert() {
+                let row = `   <tr class="table-info">
+                                        <th scope="row"><input
+                                       name="internDoppelKlein" type="number" step="0,01" /></th>
+                                           <td><input name="priesDoppelKlein" step="0,01" type="number" /></td>
+                                </tr> `;
+
+                table.insertAdjacentHTML('beforeend', row);
+            }
+
+            function MinusKleinIntern() {
+                let countelem = table.querySelectorAll("tr");
+                countelem[countelem.length - 1].remove();
+            }
 
             let Galery = document.getElementById("Galerry");
 
