--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Views/Home/Index.cshtml
@@ -127,16 +127,6 @@
                             </div>
                         </div>
                         <hr />
-                        <h2>Schlüssel</h2>
-                        <div style="margin-bottom: 50px;margin-top: 50px">
-                            <label>Schlüsselname</label>
-                            <input name="KeyName" id="NameSys" type="text" class="form-control" />
-                        </div>
-                        <div style="margin-bottom: 50px;">
-                            <label>Schlüsselkosten</label>
-                            <input name="KeyCost" type="number" step="0,1" min="0" class="form-control" />
-                        </div>
-
                         <hr />
                         <button id="createBlockBtn" type="button" class="btn btn-success">Optionen hinzufügen</button>
                         <button id="addInputBtn" type="button" class="btn btn-success">+</button>
@@ -189,7 +179,47 @@
                                         <input type="number" class="form-control" placeholder="Innen" id="inter" step="0.01" name="innen" />
                                         <input class="form-control" placeholder="Price" type="number" name="costSizeIntern" step="0.01" id="interCost" />
                                     </div>
+                               
                                 </div>
+
+                                <h5>Für zylinder aussen klein</h5>
+                                <div id="Aussen_innen_klein">
+
+                                    <div id="kleinGrose" >
+                                        <div>
+                                            <div>
+                                                <h5>Aussen</h5>
+                                                <input type="number" value="0"  name="ausKlein"/>
+                                            </div>
+                                           <div>
+                                                <h5>Preis</h5>
+                                                <input type="number" step="0,00" value="0" name="ausKleinPreis" />
+                                            </div>  
+                                        </div>
+                                        <div class="arrow-right">
+
+                                        </div>
+                                        <div>
+                                            <table class="table">
+                                                <thead>
+                                                    <tr class="table-dark">
+                                                        <th scope="col">Wert</th>
+                                                        <th scope="col">Preis</th>
+                                                        <th scope="col"><button type="button" onclick="PlusKleinIntert()" class="btn btn-success">+</button><button type="button" class="btn btn-danger" onclick="MinusKleinIntern()">-</button></th>
+                                                    </tr>
+                                                </thead>
+                                                <tbody id ="kleiIntern">
+                                                    <tr class="table-info">
+                                                        <th scope="row"><input name="internDoppelKlein" type="number" step="0,01" /></th>
+                                                        <td><input name="priesDoppelKlein" type="number" step="0,01" /></td>
+                                                    </tr> 
+                                                </tbody>
+                                            </table>
+                                        </div>
+                                    </div>
+
+                                </div>
+
                                 <div id="productOptions">
                                 </div>
                             </div>
@@ -200,11 +230,8 @@
                         <button id="RemoveInputBtn" type="button" class="btn btn-danger">-</button>
                         <input type="submit" class="btn btn-success" id="input" value="Erstellen Profil Doppelzylinder" />
                     }
-                    
                 </form>
-
             </div>
-
         </div>
         <div>
 
@@ -253,12 +280,26 @@
 {
     <script type="text/javascript">
 
+        let table = document.getElementById("kleiIntern");
 
-        function systemSwitch(value) 
+        function PlusKleinIntert() 
         {
-            let nameSys = document.getElementById("NameSys");
-            nameSys.value = value;
+            let row = `   <tr class="table-info">
+                            <th scope="row"><input
+                           name="internDoppelKlein" type="number" step="0,01" /></th>
+                               <td><input name="priesDoppelKlein" step="0,01" type="number" /></td>
+                    </tr> `;
+
+            table.insertAdjacentHTML('beforeend', row);
         }
+
+        function MinusKleinIntern() 
+        {
+            let countelem = table.querySelectorAll("tr");
+            countelem[countelem.length - 1].remove();
+        }
+
+      
 
         tinymce.init({
             selector: '#exampleFormControlTextarea1',
@@ -396,7 +437,7 @@
             plusAussen_Innen.addEventListener('click', () => {
 
                 let d = document.createElement('input');
-                d.setAttribute('name', 'SizeAus');
+                d.setAttribute('name', 'aussen');
                 d.setAttribute('placeholder', 'Aussen');
                 d.setAttribute('class', 'form-control');
                 d.id = 'aus';
@@ -410,7 +451,7 @@
                 costAussen.id = 'ausCost';
 
                 let x = document.createElement('input');
-                x.setAttribute('name', 'SizeInen');
+                x.setAttribute('name', 'innen');
                 x.setAttribute('placeholder', 'Innen');
                 x.id = 'inter';
                 x.setAttribute('class', 'form-control');
@@ -443,8 +484,6 @@
             });
 
         })
-
-        
 
 
     </script>
